# ppgee

./: Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: image.yml
demo/: check_attendency.py  check_frequency.py
ppgee/: __init__.py  __main__.py  client.py  errors.py  http.py  parser.py  permissions.py
ppgee/pages/: __init__.py  attendency.py  frequency.py
ppgee/parsers/: __init__.py  attendency.py
tests/: test_ppgee.py
