[tool.poetry]
name = "ppgee"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sendgrid = "^6.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
